# chaistl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPING.md  NOTICE  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  main.cpp
benchmark/chaistl/: comparison_reporter.cpp  comparison_reporter.hpp  registry.cpp  registry.hpp
benchmark/chaistl/algorithm/: iterator_micro.cpp  sorting.cpp  std_algorithms.cpp
benchmark/chaistl/containers/associative/: flat_containers.cpp
benchmark/chaistl/containers/hash/: unordered_containers.cpp  unordered_iteration_diagnostics.cpp
benchmark/chaistl/containers/heap/: policy_comparison.cpp
benchmark/chaistl/containers/sequence/: array.cpp  array_container_benchmarks.hpp  deque.cpp  forward_list.cpp  list.cpp  sequence_container_benchmarks.hpp  vector.cpp
benchmark/chaistl/containers/tree/: policy_comparison.cpp
benchmark/chaistl/containers/utility/: bit_structures.cpp
benchmark/chaistl/memory/: allocator_benchmark.cpp  construction_transaction_overhead.cpp  storage_builder_overhead.cpp
cmake/: chaistlConfig.cmake.in
docs/develop/: README.md
docs/develop/background/: external-resources.md  gcc-ext-pbds-census.md  iterator-patterns.md  reference-analysis.md  rotation-primitives-analysis.md
docs/develop/constitution/: architecture.md  scope.md
docs/develop/decisions/: README.md  hash-table-design.md  heap-policy-design.md  iterator-interface.md  tree-policy-design.md
docs/develop/guides/: benchmarking.md  build.md  testing.md  (+2 more)
include/chaistl/: algorithm.hpp  bitset.hpp  chaistl.hpp  concepts.hpp  containers.hpp  dynamic_bitset.hpp  iterator.hpp  memory.hpp  memory_resource.hpp  meta.hpp
scripts/: add_spdx_headers.sh  benchmark_compare.py  coverage.sh  format.sh
test/: CMakeLists.txt
test/chaistl/: smoke.cpp
test/chaistl/algorithm/: comparison.cpp  interoperability.cpp  sort.cpp
test/chaistl/concepts/: basic.cpp  container.cpp  container_element.cpp  iterator.cpp  iterator_legacy.cpp
test/chaistl/containers/associative/: skip_list_multiset.cpp  skip_list_set.cpp
test/chaistl/containers/associative/flat_map/: alloc.cpp  cons.cpp  constexpr.cpp  deduction.cpp  element_access.cpp  exception_safety.cpp  lookup.cpp  modifiers.cpp  overview.cpp  types.cpp
test/chaistl/containers/associative/flat_multimap/: alloc.cpp  cons.cpp  constexpr.cpp  deduction.cpp  exception_safety.cpp  lookup.cpp  modifiers.cpp  types.cpp
test/chaistl/containers/associative/flat_multiset/: alloc.cpp  cons.cpp  constexpr.cpp  deduction.cpp  exception_safety.cpp  lookup.cpp  modifiers.cpp  types.cpp
test/chaistl/containers/associative/flat_set/: alloc.cpp  cons.cpp  constexpr.cpp  deduction.cpp  exception_safety.cpp  lookup.cpp  modifiers.cpp  overview.cpp  transparent.cpp  types.cpp
test/chaistl/containers/associative/map/: alloc.cpp  cons.cpp  element_access.cpp  interop.cpp  lookup.cpp  modifiers.cpp  node_handle.cpp  overview.cpp  transparent.cpp
test/chaistl/containers/associative/multimap/: alloc.cpp  cons.cpp  lookup.cpp  modifiers.cpp  node_handle.cpp  overview.cpp
test/chaistl/containers/associative/multiset/: alloc.cpp  cons.cpp  lookup.cpp  modifiers.cpp  node_handle.cpp  overview.cpp  transparent.cpp
test/chaistl/containers/associative/set/: alloc.cpp  cons.cpp  interop.cpp  lookup.cpp  modifiers.cpp  node_handle.cpp  overview.cpp  transparent.cpp
test/chaistl/containers/associative/unordered_map/: alloc.cpp  cons.cpp  element_access.cpp  lookup.cpp  modifiers.cpp  node_handle.cpp  overview.cpp  transparent.cpp
test/chaistl/containers/associative/unordered_multimap/: alloc.cpp  lookup.cpp  modifiers.cpp  node_handle.cpp  overview.cpp  transparent.cpp
test/chaistl/containers/associative/unordered_multiset/: alloc.cpp  lookup.cpp  modifiers.cpp  node_handle.cpp  overview.cpp  transparent.cpp
test/chaistl/containers/associative/unordered_set/: alloc.cpp  buckets.cpp  cons.cpp  exceptions.cpp  hardening.cpp  interop.cpp  lookup.cpp  modifiers.cpp  node_handle.cpp  overview.cpp  power2_policy.cpp  stateful.cpp  transparent.cpp
test/chaistl/containers/heap/: policy_property.cpp  priority_deque.cpp  priority_queue.cpp
test/chaistl/containers/sequence/: queue.cpp  stack.cpp  support.hpp
test/chaistl/containers/sequence/array/: compatibility.cpp  element_access.cpp  overview.cpp
test/chaistl/containers/sequence/deque/: capacity.cpp  cons.cpp  erasure.cpp  interop.cpp  modifiers.cpp  overview.cpp
test/chaistl/containers/sequence/forward_list/: accessors.cpp  allocators.cpp  assign.cpp  capacity.cpp  cons.cpp  interop.cpp  iterators.cpp  modifiers.cpp  non_member.cpp  operations.cpp  overview.cpp
test/chaistl/containers/sequence/list/: accessors.cpp  allocators.cpp  assign.cpp  capacity.cpp  cons.cpp  modifiers.cpp  non_member.cpp  operations.cpp  overview.cpp
test/chaistl/containers/sequence/ring_buffer/: overwrite.cpp  policy_common.cpp  policy_protocol.cpp  reject.cpp  test_policies.hpp
test/chaistl/containers/sequence/vector/: capacity.cpp  compatibility.cpp  cons.cpp  erasure.cpp  interop.cpp  modifiers.cpp  overview.cpp
test/chaistl/containers/tree/: order_statistic_tree.cpp  policy_property.cpp  rb_tree_policy.cpp  treap_tree_policy.cpp
test/chaistl/containers/views/: span.cpp
test/chaistl/experimental/: open_addressing_set.cpp
test/chaistl/iterators/: reverse_iterator.cpp
test/chaistl/memory/: allocator.cpp  allocator_uninitialized.cpp  memory_resource.cpp  storage.cpp
test/chaistl/utility/: bitset.cpp  dynamic_bitset.cpp
test/cmake/: label_tests.cmake
test/compile_fail/: CMakeLists.txt  run.cmake
test/compile_fail/chaistl/containers/sequence/vector/: allocator_missing_storage.cpp  allocator_value_type.cpp  destructible_value_type.cpp
tools/debugger/: README.md
tools/visualizer/: CMakeLists.txt  README.md
tools/visualizer/cpp/: bindings.cpp  trace_event.hpp  vector_scenarios.cpp
tools/visualizer/web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
tools/visualizer/web/src/: main.ts  sourceMap.ts  style.css  visualCases.ts
(+158 files in other folders)
